k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vita-wise
  labels:
    name: vita-wise
    app: vita-wise-api
